# Parrofish

./: .gitattributes  .gitignore  AGENTS.md  README.md  main.py  project-brief-writing-assistant.md  pyproject.toml  这个文件不重要.docx
docs/wechat/: parrofish-wechat-article.md
packaging/: README.md  THIRD_PARTY_NOTICES.md  build_windows.ps1  parrofish.iss  parrofish.spec  windows_version_info.txt
src/writing_factory/: __init__.py  app.py  main.py  nonfiction.py
src/writing_factory/assets/: __init__.py
src/writing_factory/chat/: __init__.py  models.py  prompts.py  repository.py  service.py
src/writing_factory/config/: __init__.py  logging.py  secrets.py  settings.py
src/writing_factory/distill/: __init__.py  academic.py  academic_pipeline.py  academic_prompts.py  composition.py  composition_models.py  composition_prompts.py  composition_validation.py  expression.py  extraction.py  fidelity.py  fidelity_models.py  language.py  models.py  options.py  progress.py  prompts.py  quality.py  reference_aliases.py  runtime.py  selection.py  serialization.py  service.py  sources.py  synthesis.py
src/writing_factory/eval/: __init__.py  faithfulness.py  golden.py  injection.py  llm_judge.py  models.py  prompts.py  retrieval.py  run_eval.py  traceability.py
src/writing_factory/generate/: __init__.py  conceptual_safety.py  drafting.py  framework.py  models.py  persona_context.py  polishing.py  prompts.py  source_policy.py  topic_selection.py  verification.py
src/writing_factory/kb/: __init__.py  chunking.py  files.py  fusion.py  ingestion.py  mineru_parser.py  models.py  parent_retriever.py  parsing.py  rerank.py  retrieval.py  rewrite.py  web_retrieval.py
tests/: __init__.py  conftest.py  test_academic_distillation.py  test_app.py  test_author_chat.py  test_branding.py  test_clients.py  test_composition_distillation.py  test_concurrency.py  test_database.py  test_distill_fidelity.py  test_distill_models.py  test_distill_pipeline.py  test_distill_quality.py  test_distill_sources.py  test_distillation_options.py  test_eval_faithfulness.py  test_eval_golden.py  test_eval_injection.py  test_eval_llm_judge.py  test_eval_traceability.py  test_generation_pipeline.py  test_hybrid_retrieval.py  test_indexes.py  test_ingestion.py  test_kb_chunking.py  test_kb_files.py  test_kb_parsing.py  test_logging.py  test_main_window.py  test_mineru_parser.py  test_packaging.py  test_polishing.py  test_project_repository.py  test_recall.py  test_runtime_settings.py  test_settings.py  test_stage3_retrieval.py  test_theme.py  test_transport.py  (+2 more)
tests/fixtures/: golden_regression.json  stage3_retrieval_golden.json
tests/integration/: test_bocha_live.py  test_siliconflow_live.py  test_stage1_live.py  test_stage3_live.py
(+54 files in other folders)
