[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writing-factory"
version = "0.1.3"
description = "A traceable humanities and social-sciences writing desktop application."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "叶芃", email = "yp.work@foxmail.com" },
]
requires-python = ">=3.12,<3.13"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "citeproc-py>=0.9.0,<1",
    "citeproc-py-styles>=0.1.5,<1",
    "httpx>=0.28.1,<1",
    "jieba>=0.42.1,<1",
    "keyring>=25.6,<26",
    "lancedb>=0.20,<1",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic>=2.11,<3",
    "PyQt6>=6.8,<7",
    "rank-bm25>=0.2.2,<1",
    "tenacity>=9.1,<10",
]

[project.scripts]
writing-factory = "writing_factory.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6.1,<7",
    "pytest-qt>=4.4,<5",
    "respx>=0.22,<1",
    "ruff>=0.12,<1",
]
packaging = [
    "pyinstaller>=6.16,<7",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/writing_factory"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: calls paid or remote external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
